--- a/Thesis_Latex/content/subchapter-improvements-ethereum-overhaul.tex
+++ b/Thesis_Latex/content/subchapter-improvements-ethereum-overhaul.tex
@@ -8,7 +8,9 @@ In this section we will discuss improvements regarding the smart contract struct
 \subsection{Problem statement}
 \label{sec:impr:eth:problem}
 
-In its initial state, the project kept all of its on-chain functionality in one single smart contract. There was no separation of concerns, a lot of the universal, non instance-specific functionality was left in, which lead to not only poor scalability and reusability of the smart contract code in the future, but also to significant performance costs, which, on the ethereum network, are measured in a unit called "gas". Gas consumption defines how much computational power the network needs to execute a certain operation, which then determines how much currency should be transferred from the account of a node requesting to execute this operation, to the account of the owner of the node executing it. So in case of Ethereum, performance costs literally translate to money spent, that is why the main goal of the optimization was to minimize them.
+In its initial state, the project kept all of its on-chain functionality in one single smart contract. There was no separation of concerns, a lot of the universal, non instance-specific functionality was left in, which lead to not only poor scalability and reusability of the smart contract code in the future, but also to significant performance costs, which, on the ethereum network, are measured in a unit called "gas". Gas consumption defines how much computational power the network needs to execute a certain operation, which then determines how much currency should be transferred from the account of a node requesting to execute this operation, to the account of the owner of the node executing it. So in case of Ethereum, performance costs literally translate to money spent, that is why the main goal of the optimization was to minimize them. The listing below provides an example of code redundancy within the smart contract functionality. It contains a part of the task execution function, and as can be seen, mostly consists of parts which do not have to be in the contract and could be delegated to external components.
+
+\lstinputlisting[style=java,caption=Task execution before the optimization]{progs/executeTask-before.txt} 
 
 \subsection{Solution}
 \label{sec:impr:eth:solution}
