Updates from Overleaf

--- a/Thesis_Latex/content/chapter-improvements.tex
+++ b/Thesis_Latex/content/chapter-improvements.tex
@@ -3,4 +3,10 @@
 \chapter{Improvements}
 \label{sec:impr}
 
-TODO introduce chapter
+This chapter is split into the 4 programming tasks we were given to improve the \emph{Chrysalis} system and is therefore the place where we present the work we've done.
+\begin{itemize}
+    \item \textbf{Chapter \ref{sec:impr:enzian}:} Restructuring the System to make it easier to maintain and expand.
+    \item \textbf{Chapter \ref{sec:impr:persistence}:} Adding a persistence layer that stores information outside the browser and the Blockchain.
+    \item \textbf{Chapter \ref{sec:impr:hl}:} Creating an expansion to the system by implementing BPM on a \emph{Hyperledger} Blockchain.
+    \item \textbf{Chapter \ref{sec:impr:eth}:} Improving the Smart Contract code that the \emph{Ethereum} application deploys and invokes to make it more efficient and easier to maintain.
+\end{itemize}
