open Issues completed

--- a/Thesis_Latex/content/chapter-introduction.tex
+++ b/Thesis_Latex/content/chapter-introduction.tex
@@ -3,18 +3,29 @@
 \chapter{Introduction}
 \label{sec:intro}
 
-\cleanchapterquote{You can’t do better design with a computer, but you can speed up your work enormously.}{Wim Crouwel}{(Graphic designer and typographer)}
-
-
+TODO BPM more prevalent, interorg bpm, bla bla.
 
 \section{Business Processes on Blockchain}
 \label{sec:intro:motivation}
 
+TODO classic BPM
+
+TODO how blockchain solves that
+
+TODO hint at christian's paper
+
 \section{Problem Statement}
 \label{sec:intro:problem}
 
+TODO prototype was handed to us -> 'Chrysalis'
+
+TODO Prototype intention: "proof of concept"
+
+TODO our task: refine that system, show that it can be made compatible with modern, modular architecture and demands
+
 \section{Results}
 \label{sec:intro:results}
+
 
 
 \section{Thesis Structure}
