--- a/Thesis_Latex/content/subchapter-improvements-restructure.tex
+++ b/Thesis_Latex/content/subchapter-improvements-restructure.tex
@@ -97,7 +97,10 @@ Expanding the \emph{EnzianYellow} module with a new Blockchain of type 'x' is th
 \subsection{Transparency}
 \label{sec:impr:enzian:log}
 
-
+TODO nested logs
 
 \subsection{Result}
 \label{sec:impr:enzian:result}
+
+As per the definitions of this task, the behaviour of the codebase has essentially not changed after implementing these improvements. However, the goals of maintainability and expandability were definitely reached, with unnecessary code scatter removed, transparency increased in many places and many structures simplified. \newline
+The only opportunity missed is to separate \emph{Enzian-Yellow} into it's own secluded REST server, as this would've prevented the issue described in section \ref{sec:issues:integration}.
