--- a/Thesis_Latex/content/chapter-resources.tex
+++ b/Thesis_Latex/content/chapter-resources.tex
@@ -3,18 +3,19 @@
 \chapter{Resources}
 \label{sec:res}
 
+With us introducing this many structures to the project, the overall size of \emph{Chrysalis} and the number of it's modules has naturally grown. To make sure that future developers and users aren't overwhelmed by this, we've decided to start another repository, \emph{chrysalis-resources}, to aid in understanding and setting up the project.
 
+\textbf{Configuration Files} \\[0.2em]
+Some applications require special files to be set up, like the \emph{Ethereum} Blockchain, which needs a 'genesis block' containing configurations to begin a new Blockchain. Since we had to custom-create such a genesis block, we will provide it - and any other configuration file we encounter - in the sub-directory 'config'.
 
-\section{Configuration Files}
-\label{sec:res:configs}
+\textbf{Setup Guides} \\[0.2em]
+Since \emph{Chrysalis} as grown quite a bit from our work and requires quite a few steps to set up, we are providing a setup guide inside the directory 'setup'. \newline
+Also, when setting up new instances of the project or updating them to a new iteration, a lot of installations, CLI commands and configuration steps were necessary. We opted to write these commands and some meta-information about them into text files, so we could quickly copy and paste them when we needed them, instead of having to search or type them again. Adding a little more formatting and explanations, we're making these files available inside 'setup' as well.
 
-\section{Setup Guides}
-\label{sec:res:setup}
+\textbf{Useful Links} \\[0.2em]
+Since we sourced a lot of our knowledge about the systems we implemented from their authors - like Hyperledger, for example - we will provide the links to those knowledge bases in a folder or file named 'links'.
 
-\section{Useful Links}
-\label{sec:res:useful}
-
-\section{Other Documentation}
-\label{sec:res:other}
+\textbf{Other Documentation} \\[0.2em]
+This paper and it's source material is also situated inside 'chrysalis-resources' in the 'Thesis\_Latex' folder.
 
 
