missing genesis block

--- a/Thesis_Latex/content/subchapter-improvements-restructure.tex
+++ b/Thesis_Latex/content/subchapter-improvements-restructure.tex
@@ -99,6 +99,8 @@ Expanding the \emph{EnzianYellow} module with a new Blockchain of type 'x' is th
 
 TODO nested logs
 
+TODO documentation
+
 \subsection{Result}
 \label{sec:impr:enzian:result}
 
